MODIS 1.1.5

Bugfixes:

  * Missing compatibility of repDoy() with results from extractDate().


MODIS 1.1.4

New features: 

  * After temporary inoperability, runMRT() is fully functional again.
  * Interactive feature drawing is now implemented in getTile(), check out the documentation.
  * getTile() supports 'sp' or 'sf' point geometries with length = 1 (i.e. a single point), in which case the target extent is the MODIS tile covering the specified location.
  * New classes 'MODISproduct' and 'MODISfile' created by getProduct().

Changes:

  * When running getHdf() (or runGdal()) with LP DAAC or NSIDC as target download server and Earthdata login credentials in ~/.netrc are missing, the user is forced to insert the required information on the command line. This is intended to avoid repeat authentication failures.
  * Functions checkIntegrity(), OutProj(), PixelSize(), ResamplingType(), BlockSize(), OutputCompression(), QuietOutput(), genString(), checkTools(), ModisFileDownloader(), and doCheckIntegrity() no longer have an 'opts' argument.


MODIS 1.1.3

New features: 

  * Support for MOD/MYD10 and MOD/MYD29 product series distributed by National Snow & Ice Data Center (NSIDC; <https://nsidc.org/>).
  
Bugfixes: 

  * Curl-based download from LP DAAC.
  * "Error: object 'tid' not found" from climate modeling grids (CMG) not being identified as such, but treated as tiled products.
  * Wrong dimension and resolution of images created by runGdal() when working with whole tiles instead of spatial subsets (i.e. 'tileH,tileV' specified; see <https://github.com/MatMatt/MODIS/issues/46>).
  
Changes:

  * Code adjustments related to LAADS transition from FTP to HTTPS. In this context, lpdaacLogin() is now deprecated and has been replaced with EarthdataLogin() since both LP DAAC and LAADS require the specification of Earthdata login credentials.
  * EarthdataLogin() now allows multiple entries in a .netrc file in case users have other servers not related to Earthdata.